# searchLM

./: .env.example  .gitignore  .modalignore  CLAUDE.md  EVALUATION_REFACTOR.md  LICENSE  MODAL_INTERACTIVE_GUIDE.md  Makefile  PROGRESS.md  README.md  modal_infra.py  pyproject.toml
config/: default.yaml
data/: generated_queries.tsv  scifact_generated_queries.tsv
docs/: MODAL_DEVELOPMENT.md  USAGE.md
evaluation_output/: evaluation_summary_20260131_152124.json
evaluation_output/base/: base_eval_run1_20260131_151449.json  base_eval_run2_20260131_151621.json  base_eval_run3_20260131_151750.json
evaluation_output/rlhf/: rlhf_eval_run1_20260131_151919.json  rlhf_eval_run2_20260131_152019.json  rlhf_eval_run3_20260131_152124.json
reports/: reward_hacking_v1.md  reward_hacking_v2.md
scripts/: analyze_reward_hacking.py  base_evaluation.py  generate_sft_dataset.py  push_models.py  upload_to_hf.py
searchlm/: __init__.py  config.py  inference.py  prompts.py
searchlm/data/: __init__.py  base_loader.py  factory.py  models.py  nfcorpus_loader.py  scifact_loader.py
searchlm/data/ingesters/: __init__.py  base.py  nfcorpus.py  pipeline.py  scifact.py
searchlm/data/loaders/: __init__.py  base.py  factory.py  helpers.py  nfcorpus.py  scifact.py
searchlm/data/schemas/: __init__.py  constants.py  index.py
searchlm/evaluation/: __init__.py  evaluator.py  metrics.py  models.py
searchlm/ingestion/: __init__.py  base_ingester.py  nfcorpus_ingester.py  pipeline.py  scifact_ingester.py
searchlm/models/: __init__.py  domain.py  evaluation.py
searchlm/rlhf/: __init__.py  data_prep.py  evaluation.py  reward.py  reward_v2.py  sft.py  training.py
searchlm/sampling/: baseline_sampling.py
searchlm/schema/: __init__.py  index_schema.py
searchlm/search_engine/: __init__.py  engine.py  utils.py
searchlm/services/: __init__.py  evaluator.py  metrics.py  search.py
searchlm/utils/: __init__.py  logging_utils.py  validation.py
searchlm/workflows/: __init__.py
searchlm/workflows/baseline/: __init__.py  baseline.py  cli.py  sampling.py
searchlm/workflows/rlhf/: __init__.py  cli.py  data_prep.py  evaluation.py  reward.py  training.py
