[project]
name = "searchlm"
version = "0.1.0"
description = "SearchLM - post training a LLM with Reinforcement Learning with Verifiable Rewards (RLVR) to generate better boolean search queries"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Supreeth Rao", email = "raosupreeth00@gmail.com" },
]
license = { text = "MIT" }
keywords = [
    "search",
    "information retrieval",
    "reinforcement learning",
    "verifiable rewards",
    "RLVR",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "datasets>=4.5.0",
    "modal>=1.3.1",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.2.1",
    "tantivy>=0.25.1",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
    "vllm==0.12.0; sys_platform == 'linux'",
    "trl[vllm]==0.27.0; sys_platform == 'linux'",
    "trl>=0.27.0",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "isort>=7.0.0",
    "ruff>=0.14.14",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*"]
known_first_party = ["searchlm"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["searchlm"]
